# x11cal

./: .clangd  README.md
k16brightd/: .gitignore  Makefile.am  README  configure.ac  example.c  k16brightd.c  libtool  net.iczelia.K16BrightD.conf  net.iczelia.K16BrightD.service  net.iczelia.K16BrightD.systemd.service
x11cal/: .gitignore  Makefile.am  configure.ac  x11cal.1  x11cal.c
x11kickstart/: .gitignore  Makefile.am  bg-add.png.h  bg.png.h  configure.ac  da.png.h  verdana.ttf.h  x11kickstart  x11kickstart.c
x11notif/: .gitignore  Makefile.am  config.h.in  configure.ac  x11notif.c
x11power/: .gitignore  Makefile.am  configure.ac  x11power.c
x11winch/: .gitignore  Makefile.am  configure.ac  x11winch.c
